--- a/shop-startup/src/main/resources/fxml/admin.fxml
+++ b/shop-startup/src/main/resources/fxml/admin.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="book.controller.AdminController">
+            fx:controller="com.xjh.startup.controller.AdminController">
     <ListView fx:id="adminListView" prefHeight="500" prefWidth="600.0" AnchorPane.leftAnchor="50"
               AnchorPane.topAnchor="10">
     </ListView>
