--- a/shop-startup/src/main/resources/fxml/image.fxml
+++ b/shop-startup/src/main/resources/fxml/image.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="book.controller.ImageController">
+            fx:controller="com.xjh.startup.controller.ImageController">
     <FlowPane AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"
               AnchorPane.bottomAnchor="10" hgap="20" vgap="10" fx:id="imageContainer">
 
