--- a/shop-startup/src/main/resources/fxml/view_book.fxml
+++ b/shop-startup/src/main/resources/fxml/view_book.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="book.controller.ViewBookController">
+            fx:controller="com.xjh.startup.controller.ViewBookController">
     <FlowPane fx:id="bookPane" hgap="10" vgap="10"
               AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="20"/>
 </AnchorPane>
