--- a/shop-startup/src/main/resources/fxml/view_desk.fxml
+++ b/shop-startup/src/main/resources/fxml/view_desk.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.171"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="book.controller.DeskController">
+            fx:controller="com.xjh.startup.controller.DeskController">
     <ScrollPane fitToWidth="true" fitToHeight="true" prefWidth="1200">
         <FlowPane fx:id="deskPane" hgap="10" vgap="10"
                   AnchorPane.leftAnchor="0"
