--- a/shop-startup/src/main/resources/fxml/add_book.fxml
+++ b/shop-startup/src/main/resources/fxml/add_book.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="book.controller.AddBookController"
+            fx:controller="com.xjh.startup.controller.AddBookController"
             prefHeight="500.0" prefWidth="600.0">
     <HBox AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"
           minHeight="50" alignment="CENTER" styleClass="green-theme">
