--- a/shop-startup/src/main/resources/fxml/login.fxml
+++ b/shop-startup/src/main/resources/fxml/login.fxml
@@ -11,10 +11,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.xjh.startup.controller.LoginController" styleClass="login-bg">
-    <AnchorPane AnchorPane.topAnchor="120" AnchorPane.leftAnchor="400" styleClass="login-card">
+<VBox xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="com.xjh.startup.controller.LoginController" styleClass="login-bg">
+    <AnchorPane styleClass="login-card">
         <Label text="小句号点餐收银系统" styleClass="login-title" AnchorPane.topAnchor="25" AnchorPane.leftAnchor="160"/>
         <!--        <Label text="图书管理系统后台" styleClass="font-gray" AnchorPane.topAnchor="65" AnchorPane.leftAnchor="190"/>-->
         <VBox prefWidth="330" AnchorPane.topAnchor="90" AnchorPane.leftAnchor="100" spacing="20">
@@ -49,4 +49,4 @@
             </padding>
         </VBox>
     </AnchorPane>
-</AnchorPane>
+</VBox>
