--- a/shop-startup/src/main/resources/fxml/book.fxml
+++ b/shop-startup/src/main/resources/fxml/book.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.control.ComboBox?>
@@ -7,20 +8,19 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.xjh.startup.controller.BookController">
-    <HBox alignment="BOTTOM_CENTER" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" spacing="10">
-        <Button styleClass="green-theme,btn-radius" text="添加图书" onAction="#newBookStage"/>
-        <Button styleClass="blue-theme,btn-radius" text="导出数据" onAction="#export"/>
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.xjh.startup.controller.BookController">
+    <HBox alignment="BOTTOM_CENTER" spacing="10" AnchorPane.leftAnchor="10" AnchorPane.topAnchor="10">
+        <Button onAction="#newBookStage" styleClass="green-theme,btn-radius" text="添加图书"/>
+        <Button onAction="#export" styleClass="blue-theme,btn-radius" text="导出数据"/>
+        <ComboBox id="helloId" layoutX="169.0" layoutY="10.0" prefHeight="31.0" prefWidth="100.0" promptText="测试0001"/>
     </HBox>
-    <HBox alignment="CENTER" AnchorPane.topAnchor="60" AnchorPane.leftAnchor="10" spacing="10">
-        <ComboBox promptText="选择图书类别" fx:id="typeComboBox" prefWidth="150"/>
-        <TextField promptText="请输入关键词" fx:id="keywordsField"/>
-        <Button styleClass="green-theme" text="搜索" onAction="#search"/>
+
+    <HBox alignment="CENTER" spacing="10" AnchorPane.leftAnchor="10" AnchorPane.topAnchor="60">
+        <ComboBox fx:id="typeComboBox" prefWidth="150" promptText="选择图书类别"/>
+        <TextField fx:id="keywordsField" promptText="请输入关键词"/>
+        <Button onAction="#search" styleClass="green-theme" text="搜索"/>
     </HBox>
-    <TableView fx:id="bookTable" prefWidth="1000"
-               AnchorPane.topAnchor="110" AnchorPane.leftAnchor="10">
+    <TableView fx:id="bookTable" prefWidth="1000" AnchorPane.leftAnchor="10" AnchorPane.topAnchor="110">
         <columns>
             <TableColumn text="ID">
                 <cellValueFactory>
@@ -32,17 +32,17 @@
                     <PropertyValueFactory property="name"/>
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn text="作者">
+            <TableColumn prefWidth="97.0" text="作者">
                 <cellValueFactory>
                     <PropertyValueFactory property="author"/>
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn text="价格">
+            <TableColumn prefWidth="63.0" text="价格">
                 <cellValueFactory>
                     <PropertyValueFactory property="price"/>
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn text="库存">
+            <TableColumn prefWidth="88.0" text="库存">
                 <cellValueFactory>
                     <PropertyValueFactory property="stock"/>
                 </cellValueFactory>
