--- a/shop-startup/src/main/resources/fxml/login.fxml
+++ b/shop-startup/src/main/resources/fxml/login.fxml
@@ -14,10 +14,10 @@
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.xjh.startup.controller.LoginController" styleClass="login-bg">
-    <AnchorPane styleClass="login-card">
-        <Label text="小句号点餐收银系统" styleClass="login-title" AnchorPane.topAnchor="25" AnchorPane.leftAnchor="160"/>
+    <VBox styleClass="login-card" prefWidth="500" alignment="CENTER">
+        <Label text="小句号点餐收银系统" styleClass="login-title"/>
         <!--        <Label text="图书管理系统后台" styleClass="font-gray" AnchorPane.topAnchor="65" AnchorPane.leftAnchor="190"/>-->
-        <VBox prefWidth="330" AnchorPane.topAnchor="90" AnchorPane.leftAnchor="100" spacing="20">
+        <VBox prefWidth="330" alignment="CENTER" spacing="15">
             <TextField promptText="账号" focusTraversable="false" fx:id="accountField" text="1"/>
             <PasswordField promptText="密码" focusTraversable="false" fx:id="passwordField" text="1"/>
             <!--            <HBox spacing="20">-->
@@ -43,10 +43,13 @@
                     <Image url="/img/dingding.jpeg"/>
                 </ImageView>
                 <Label text="注册账号" styleClass="font-green"/>
+                <padding>
+                    <Insets left="30" right="30"/>
+                </padding>
             </HBox>
             <padding>
-                <Insets top="20" left="20" right="20" bottom="20"/>
+                <Insets top="60" left="80" right="80" bottom="20"/>
             </padding>
         </VBox>
-    </AnchorPane>
+    </VBox>
 </VBox>
