--- a/shop-startup/src/main/resources/fxml/login.fxml
+++ b/shop-startup/src/main/resources/fxml/login.fxml
@@ -26,8 +26,8 @@
                 <PasswordField fx:id="passwordField" focusTraversable="false" prefHeight="26.0" prefWidth="288.0" promptText="密码"/>
             </HBox>
             <AnchorPane>
-                <CheckBox layoutX="14.0" text="记住密码" AnchorPane.leftAnchor="14.0"/>
-                <Label layoutX="259.0" styleClass="font-green" text="忘记密码" AnchorPane.rightAnchor="29.0"/>
+                <CheckBox text="记住密码" AnchorPane.leftAnchor="14.0"/>
+                <Label text="忘记密码" AnchorPane.rightAnchor="29.0" styleClass="font-green"/>
             </AnchorPane>
             <Button onAction="#login" styleClass="login-btn" text="登入"/>
             <HBox alignment="BOTTOM_LEFT" spacing="12">
